Initial Styles and Setup

--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -21,9 +21,14 @@
 
 <br><br>
 
-<mat-form-field appearance="outline">
-  <mat-label>Outline form field</mat-label>
-  <input matInput placeholder="Placeholder">
-  <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-  <mat-hint>Hint</mat-hint>
+<mat-form-field appearance="fill">
+  <mat-label>Email Address</mat-label>
+  <mat-icon matPrefix>mail_outline</mat-icon>
+  <input matInput placeholder="Email Address">
 </mat-form-field>
+
+<br><br>
+
+<simple-tag name='adobe Photoshop'></simple-tag>
+<simple-tag name='Physics'></simple-tag>
+<simple-tag name='math'></simple-tag>
