--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<app-toolbar></app-toolbar>
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
 </div>
-
 
 <router-outlet></router-outlet>
