--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -173,9 +173,8 @@ $md-cfgray: (
 
 $btn-radius: 28pt;
 
-$btn-primary-focus-overlay-color: #000000;
 $btn-secodary-outline-color:#e4ecf7;
 
-$btn-primary-text-color: rgba(#ffffff, 0.84);
+$btn-primary-text-color: #318bd6;
 $btn-secondary-text-color: rgba(#001D40, 0.84);
 
