--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -9,57 +9,26 @@
   Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
-<button mat-raised-button>
-  Primary Button
-</button>
-<button mat-raised-button color="primary">
-  Primary Button
-</button>
-<button mat-raised-button color="accent">
-  Accent Button
-</button>
-<button mat-raised-button color="warn">
-  Warn Button
-</button>
 <br><br>
-<button mat-stroked-button>
-  Primary Button
-</button>
-<button mat-stroked-button color="primary">
-  Primary Button
-</button>
-<button mat-stroked-button color="accent">
-  Accent Button
-</button>
-<button mat-stroked-button color="warn">
-  Warn Button
-</button>
+<action-button type="primary" title="Primary Button"></action-button>
+<action-button type="primary" title="Primary Button" color="primary"></action-button>
+<action-button type="primary" title="Accent Button" color="accent"></action-button>
+<action-button type="primary" title="Warn Button" color="warn"></action-button>
 <br><br>
-<button mat-button disableRipple="true">
-  Text Button
-</button>
-<button mat-button color="primary" disableRipple="true">
-  Primary Button
-</button>
-<button mat-button color="accent" disableRipple="true">
-  Accent Button
-</button>
-<button mat-button color="warn" disableRipple="true">
-  Warn Button
-</button>
+<action-button type="secondary" title="Secondary Button"></action-button>
+<action-button type="secondary" title="Primary Button" color="primary"></action-button>
+<action-button type="secondary" title="Accent Button" color="accent"></action-button>
+<action-button type="secondary" title="Warn Button" color="warn"></action-button>
 <br><br>
-<button mat-flat-button>
-  Apply
-</button>
-<button mat-flat-button color="primary">
-  Primary Button
-</button>
-<button mat-flat-button color="accent">
-  Accent Button
-</button>
-<button mat-flat-button color="warn">
-  Warn Button
-</button>
+<action-button type="teritory" title="Text Button"></action-button>
+<action-button type="teritory" title="Primary Button" color="primary"></action-button>
+<action-button type="teritory" title="Accent Button" color="accent"></action-button>
+<action-button type="teritory" title="Warn Button" color="warn"></action-button>
+<br><br>
+<action-button title="Apply Button"></action-button>
+<action-button title="Primary Button" color="primary"></action-button>
+<action-button title="Accent Button" color="accent"></action-button>
+<action-button title="Warn Button" color="warn"></action-button>
 <br><br>
 
 <mat-form-field appearance="fill">
