--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -38,7 +38,12 @@
 </mat-form-field>
 
 <br><br>
+<simple-tag type="matched" title="matched"></simple-tag>
+<simple-tag type="missing" title="missing"></simple-tag>
+<simple-tag type="normal" title="normal"></simple-tag>
+<simple-tag type="required" title="required"></simple-tag>
+<br><br>
 
-<simple-tag name='adobe Photoshop'></simple-tag>
-<simple-tag name='Physics'></simple-tag>
-<simple-tag name='math'></simple-tag>
+<simple-tag title='adobe Photoshop'></simple-tag>
+<simple-tag title='Physics'></simple-tag>
+<simple-tag title='math'></simple-tag>
