--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -171,4 +171,37 @@ $md-cfgray: (
     )
 );
 
+$md-cfred: (
+    50 : #f9eaea,
+    100 : #f1cbcb,
+    200 : #e8a9a9,
+    300 : #de8787,
+    400 : #d76d6d,
+    500 : #d05353,
+    600 : #cb4c4c,
+    700 : #c44242,
+    800 : #be3939,
+    900 : #b32929,
+    A100 : #fff3f3,
+    A200 : #ffc0c0,
+    A400 : #ff8d8d,
+    A700 : #ff7474,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
 $btn-radius: 28pt;
