--- a/client/src/app/components/simple-tag/simple-tag.component.html
+++ b/client/src/app/components/simple-tag/simple-tag.component.html
@@ -1,3 +1,5 @@
-<span>
-  {{name}}
-</span>
+<ng-container *ngIf="type">
+  <span [class]="tagClasseNames[type]">
+    {{title}}
+  </span>
+</ng-container>
