Import SVG files

--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -43,6 +43,9 @@
 <simple-tag type="normal" title="normal"></simple-tag>
 <simple-tag type="required" title="required"></simple-tag>
 <br><br>
+<simple-tag type="online" title="Looking For Job" onlineTag="true"></simple-tag>
+<simple-tag type="normal" title="Skill With Proficieny" ellipseTag="true" value="4"></simple-tag>
+<br><br>
 
 <simple-tag title='adobe Photoshop'></simple-tag>
 <simple-tag title='Physics'></simple-tag>
