--- a/client/src/app/components/simple-tag/simple-tag.component.html
+++ b/client/src/app/components/simple-tag/simple-tag.component.html
@@ -1,5 +1,9 @@
 <ng-container *ngIf="type">
-  <span [class]="tagClasseNames[type]">
-    {{title}}
-  </span>
+  <div [class]="tagClasseNames[type]" [class.tag-ellipse]="ellipseTag" [class.tag-online]="onlineTag" [class.tag-container]="type">
+    <span *ngIf="title">{{title}}</span>
+    <mat-icon *ngIf="onlineTag">radio_button_checked</mat-icon>
+    <div *ngIf="ellipseTag" class='ellipse-container'>
+      <mat-icon *ngFor="let val of numbers" [class.active]="val < value">brightness_1</mat-icon>
+    </div>
+  </div>
 </ng-container>
