--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -43,8 +43,15 @@
 <simple-tag type="normal" title="normal"></simple-tag>
 <simple-tag type="required" title="required"></simple-tag>
 <br><br>
-<simple-tag type="online" title="Looking For Job" onlineTag="true"></simple-tag>
+<simple-tag type="matched" title="Looking For Job" onlineTag="true"></simple-tag>
+<simple-tag type="missing" title="Looking For Job" onlineTag="true"></simple-tag>
+<simple-tag type="normal" title="Looking For Job" onlineTag="true"></simple-tag>
+<simple-tag type="required" title="Looking For Job" onlineTag="true"></simple-tag>
+<br><br>
+<simple-tag type="matched" title="Skill With Proficieny" ellipseTag="true" value="6"></simple-tag>
+<simple-tag type="missing" title="Skill With Proficieny" ellipseTag="true" value="1"></simple-tag>
 <simple-tag type="normal" title="Skill With Proficieny" ellipseTag="true" value="4"></simple-tag>
+<simple-tag type="required" title="Skill With Proficieny" ellipseTag="true" value="5"></simple-tag>
 <br><br>
 
 <simple-tag title='adobe Photoshop'></simple-tag>
