--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -38,18 +38,18 @@
 </mat-form-field>
 
 <br><br>
-<simple-tag type="matched" title="matched"></simple-tag>
-<simple-tag type="missing" title="missing"></simple-tag>
-<simple-tag type="normal" title="normal"></simple-tag>
-<simple-tag type="required" title="required"></simple-tag>
+<simple-tag type="green" title="matched"></simple-tag>
+<simple-tag type="red" title="missing"></simple-tag>
+<simple-tag type="gray" title="normal"></simple-tag>
+<simple-tag title="required"></simple-tag>
 <br><br>
-<simple-tag type="matched" title="Looking For Job" onlineTag="true"></simple-tag>
-<simple-tag type="missing" title="Looking For Job" onlineTag="true"></simple-tag>
-<simple-tag type="normal" title="Looking For Job" onlineTag="true"></simple-tag>
-<simple-tag type="required" title="Looking For Job" onlineTag="true"></simple-tag>
+<simple-tag type="green" title="Looking For Job" onlineTag="true"></simple-tag>
+<simple-tag type="red" title="Looking For Job" onlineTag="true"></simple-tag>
+<simple-tag type="gray" title="Looking For Job" onlineTag="true"></simple-tag>
+<simple-tag title="Looking For Job" onlineTag="true"></simple-tag>
 <br><br>
-<simple-tag type="matched" title="Skill With Proficieny" ellipseTag="true" value="6"></simple-tag>
-<simple-tag type="missing" title="Skill With Proficieny" ellipseTag="true" value="1"></simple-tag>
-<simple-tag type="normal" title="Skill With Proficieny" ellipseTag="true" value="4"></simple-tag>
-<simple-tag type="required" title="Skill With Proficieny" ellipseTag="true" value="5"></simple-tag>
+<simple-tag type="green" title="Skill With Proficieny" ellipseTag="true" value="6"></simple-tag>
+<simple-tag type="red" title="Skill With Proficieny" ellipseTag="true" value="1"></simple-tag>
+<simple-tag type="gray" title="Skill With Proficieny" ellipseTag="true" value="4"></simple-tag>
+<simple-tag title="Skill With Proficieny" ellipseTag="true" value="5"></simple-tag>
 <br><br>
