--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>h1. Heading</h1>
 <h2>h2. Heading</h2>
 <h3>h3. Heading</h3>
@@ -9,6 +10,47 @@
   Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
+<br><br>
+<img src="assets/icons/ic_employees.svg">
+<img src="assets/icons/ic_website.svg">
+<img src="assets/icons/ic_checked.svg">
+<img src="assets/icons/ic_permissions.svg">
+<img src="assets/icons/ic_permissions_inactive.svg">
+<img src="assets/icons/ic_university.svg">
+<br><br>
+<img src="assets/icons/ic_twitter.svg">
+<img src="assets/icons/ic_facebook.svg">
+<img src="assets/icons/ic_google.svg">
+<img src="assets/icons/ic_linkedin.svg">
+<img src="assets/icons/ic_google_circle.svg">
+<img src="assets/icons/ic_facebook_circle.svg">
+<img src="assets/icons/ic_twitter_circle.svg">
+<br><br>
+<img src="assets/icons/ic_heart.svg">
+<img src="assets/icons/ic_heart_circle.svg">
+<img src="assets/icons/ic_more.svg">
+<img src="assets/icons/ic_more_vertical.svg">
+<img src="assets/icons/ic_circle.svg">
+<img src="assets/icons/ic_checked_circle.svg">
+<img src="assets/icons/ic_unchecked_circle.svg">
+<img src="assets/icons/ic_search.svg">
+<img src="assets/icons/ic_question.svg">
+<br><br>
+<img src="assets/icons/ic_company.svg">
+<img src="assets/icons/ic_location.svg">
+<img src="assets/icons/ic_clock.svg">
+<img src="assets/icons/ic_birthday-cake.svg">
+<img src="assets/icons/ic_male.svg">
+<img src="assets/icons/ic_female.svg">
+<img src="assets/icons/ic_arrow_down.svg">
+<img src="assets/icons/ic_arrow_right.svg">
+<img src="assets/icons/ic_paperclip.svg">
+<br><br>
+<div class="container__gray">
+  <img src="assets/icons/ic_cv.svg">
+  <img src="assets/icons/ic_cf_logo.svg">
+  <img src="assets/icons/ic_camera.svg">
+</div>
 <br><br>
 <action-button type="primary" title="Primary Button"></action-button>
 <action-button type="primary" title="Primary Button" color="primary"></action-button>
@@ -53,3 +95,4 @@
 <simple-tag type="gray" title="Skill With Proficieny" ellipseTag="true" value="4"></simple-tag>
 <simple-tag title="Skill With Proficieny" ellipseTag="true" value="5"></simple-tag>
 <br><br>
+</div>
