--- a/client/src/app/pages/style-guide/style-guide.component.scss
+++ b/client/src/app/pages/style-guide/style-guide.component.scss
@@ -8,8 +8,14 @@
   justify-content: $justify;
 }
 
-div.container {
+:host {
+  display: inline-block;
   padding: 50px;
+  box-sizing: border-box;
+}
+
+.container {
+  @include flex(row, center, flex-start);
   &__gray {
     @include flex(row, center, flex-start);
     background-color: rgba(map-get($md-cfaccent, 500), 0.2);
