--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -67,20 +67,20 @@
   <img src="assets/icons/ic_camera.svg">
 </div>
 <br><br>
-<action-button type="primary" title="Primary Button"></action-button>
-<action-button type="primary" title="Primary Button" color="primary"></action-button>
-<action-button type="primary" title="Accent Button" color="accent"></action-button>
-<action-button type="primary" title="Warn Button" color="warn"></action-button>
+<action-button type="raised" title="Primary Button"></action-button>
+<action-button type="raised" title="Primary Button" color="primary"></action-button>
+<action-button type="raised" title="Accent Button" color="accent"></action-button>
+<action-button type="raised" title="Warn Button" color="warn"></action-button>
 <br><br>
-<action-button type="secondary" title="Secondary Button"></action-button>
-<action-button type="secondary" title="Primary Button" color="primary"></action-button>
-<action-button type="secondary" title="Accent Button" color="accent"></action-button>
-<action-button type="secondary" title="Warn Button" color="warn"></action-button>
+<action-button type="stroked" title="Secondary Button"></action-button>
+<action-button type="stroked" title="Primary Button" color="primary"></action-button>
+<action-button type="stroked" title="Accent Button" color="accent"></action-button>
+<action-button type="stroked" title="Warn Button" color="warn"></action-button>
 <br><br>
-<action-button type="teritory" title="Text Button"></action-button>
-<action-button type="teritory" title="Primary Button" color="primary"></action-button>
-<action-button type="teritory" title="Accent Button" color="accent"></action-button>
-<action-button type="teritory" title="Warn Button" color="warn"></action-button>
+<action-button type="text" title="Text Button"></action-button>
+<action-button type="text" title="Primary Button" color="primary"></action-button>
+<action-button type="text" title="Accent Button" color="accent"></action-button>
+<action-button type="text" title="Warn Button" color="warn"></action-button>
 <br><br>
 <action-button title="Apply Button"></action-button>
 <action-button title="Primary Button" color="primary"></action-button>
