--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -198,6 +198,7 @@ p {
 button {
     border-radius: 500px !important;
     padding: 10px 40px !important;
+    min-width: 170px !important;
 }
 
 /*
