--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -207,3 +207,6 @@ $md-cfred: (
 $btn-radius: 28pt;
 
 $container-max-width: 1365px;
+
+$mat-form-bg-color: #ecf3fc;
+$mat-form-border-color: #dae4f1;
