--- a/client/src/app/pages/login/login.component.scss
+++ b/client/src/app/pages/login/login.component.scss
@@ -68,6 +68,20 @@ $primary-font-color: map-get($md-cfaccent, 500);
           margin: 0 0 40px 0;
         }
       }
+      &__form {
+        mat-form-field {
+          box-sizing: border-box;
+          font-size: 20px;
+          margin-top: -1px;
+        }
+        :first-child {
+          border-radius: 4px 4px 0 0;
+          margin-top: 0;
+        }
+        :last-child {
+          border-radius: 0 0 4px 4px;
+        }
+      }
       &__checkbox {
         display: flex;
         align-items: center;
