--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -170,6 +170,75 @@ $client-theme: mat-light-theme($client-primary, $client-accent, $client-warn);
     }
 }
 
+@mixin mat-form-field-fill-theme($theme) {
+    $foreground: map-get($theme, foreground);
+    $is-dark-theme: map-get($theme, is-dark);
+  
+    $fill-background: mat-color($foreground, base, if($is-dark-theme, 0.1, 0.04));
+    $fill-disabled-background: mat-color($foreground, base, if($is-dark-theme, 0.05, 0.02));
+    $underline-color: mat-color($foreground, divider, if($is-dark-theme, 0.5, 0.42));
+    $label-disabled-color: mat-color($foreground, disabled-text);
+  
+    .mat-form-field-appearance-fill {
+        border: solid 1px $mat-form-border-color;
+        border-radius: 0;
+        color: $btn-text-color;
+        &.mat-focused {
+            .mat-form-field-wrapper {
+                .mat-form-field-flex {
+                    background-color: transparent;
+                }
+            }
+        }
+        .mat-form-field-wrapper {
+            padding-bottom: 0;
+            .mat-form-field-flex {
+                background-color: $mat-form-bg-color;
+                border-radius: 0;
+            }
+            .mat-form-field-prefix {
+                margin-right: 15px;
+                color: rgba(#525252, 0.3);
+            }
+            .mat-form-field-infix {
+                label {
+                    color: rgba(map-get($md-cfaccent, 500), 0.44);
+                }
+                input {
+                    height: 25px;
+                }
+            }
+            .mat-form-field-suffix {
+                color: map-get($md-cdgreen, 500)
+            }
+        }
+      
+  
+        &.mat-form-field-disabled .mat-form-field-flex {
+            background-color: $fill-disabled-background;
+        }
+
+        .mat-form-field-underline {
+            display: none;
+        }
+    
+        .mat-form-field-underline::before {
+            background-color: $underline-color;
+        }
+  
+        &.mat-form-field-disabled {
+            .mat-form-field-label {
+                color: $label-disabled-color;
+            }
+    
+            .mat-form-field-underline::before {
+                background-color: transparent;
+            }
+        }
+    }
+}
+
+
 @include angular-material-theme($client-theme);
 
 
@@ -199,19 +268,6 @@ button {
     border-radius: 500px !important;
     padding: 10px 40px !important;
     min-width: 170px !important;
-}
-
-/*
-    Material Overwrites
-*/
-.mat-form-field-appearance-fill .mat-form-field-flex {
-    border: 1px solid map-get($md-cfgray, 500);
-}
-.mat-form-field-prefix {
-    margin-right: 10px;
-}
-.mat-form-field-appearance-fill .mat-form-field-flex {
-    background-color: rgba(0, 0, 0, 0.01);
 }
 
 .container {
